--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "start": "vite preview --host",
+    "start": "vite preview",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
@@ -12,11 +12,7 @@
   },
   "proxy": "http://localhost:3000",
   "dependencies": {
-    "@huggingface/inference": "^2.8.1",
     "axios": "^1.7.9",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
     "json": "^11.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
